# GraFITi

./: README.md  __init__.py  hyper_param_bipartite.py  hyper_param_former.py  print_result.py  script-mimic-iii.py  script_physionet2012.py  train_bipartitegraph.py  train_flow.py  train_former.py  train_fullgraph.py  train_grafiti.py  train_gratif.py  train_gru_ode_bayes.py  train_linodenet.py  train_tripletformer.py
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyre_configuration  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  poetry.toml  pyproject.toml  requirements.txt
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/: Cache Parametrization.ipynb  Remark_ModuleList_vs_Sequential.md  namespace_cleaning.ipynb  scripted_model.torch  signature.ipynb  tmp.ipynb  untitled.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/benchmark/: Analysis_LinODE.ipynb  forward_backward_error_fp32.csv  forward_backward_error_fp64.csv  speed_test.ipynb  test_forward_stability.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/bugs/: torch_script_unicode.ipynb  torchscript_magic_method.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/experiments/: PackedSequence.ipynb  batch-speed-test.ipynb  batch_test.ipynb  custom-data-loader.ipynb  dataloader_list_test.ipynb  pytorch-forecasting-example.ipynb  regular_irregular.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/filter/: KalmanCell.ipynb  SequentialFilter-Implementation.ipynb  SequentialFilter.ipynb  Untitled.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/layers/: BatchNorm.ipynb  Series-implemented.ipynb  attribute_dict_test.ipynb  series_parallel.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/models/: 2_LinearODERNN.ipynb  LinODE-RNN.ipynb  LinODEnet_V2.ipynb  LinearODE-torchscript-Copy1.ipynb  LinearODE-torchscript-Copy2.ipynb  LinearODE-torchscript.ipynb  LinearODE.ipynb  LinearODERNN.ipynb  ResNet.ipynb  ResNet_v2.ipynb  SpectralNorm-new.ipynb  SpectralNorm.ipynb  Transformer.ipynb  iResNet.ipynb  ode_rnn.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/test/: nanmean.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/dev/util/: Base_Layers.ipynb  autojit-implementation.ipynb  autojit.ipynb  class_decorator.ipynb  class_decorator_2.ipynb  constants.ipynb  model_loading.ipynb  pad_tensor.ipynb  register_buffer.ipynb  signature.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/diagram/: GRU-ODE-BAYES.drawio  linodenet.drawio
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/docs/: Makefile  conf.py  index.rst
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/docs/_ext/: helloworld.py  signatures.py
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/docs/_static/: .gitkeep
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/run/: clean_by_gitignore.sh  find_triple_quotes.sh  generate_requirements.sh  pydeps.sh  setup_precommit.sh  setup_remote.sh
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/src/linodenet/: __init__.py  py.typed
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/tests/: __init__.py  test_LinODE.py  test_all.py  test_filters.py  test_iResNet.py  test_initializations.py  test_stability.py
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/linodenet/tests/test_projections/: __init__.py  test_projections.py
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  pyproject.toml  requirements.txt
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/bugs/: 4108.py  __module__Missing.py  abc_type_hint.py  abstractattribute.py  abstractmethod_signatures.py  collect_env.py  dispatch_on_list.py  flake8_W504.py  hparams.py  jit_export_staticmethod.py  matplotlib_pandas_nullable.ipynb  numpy_typing.py  overload_problem.py  overload_tuples.py  pickle_namedtupel.ipynb  pickle_subclass_hook.py  recursive_typehint.py  tmp.py  torch_runtime_0slice.py  torch_sampler.py  type_narrowing.py  typed_dict.py  typevar_bind_either.py  typevar_bind_mapping.py  typevar_fallback.py  typevar_multiple_subclass.py  typevar_subclass.py  wrap_cahnges_type.py
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/data/: Mappe1.xlsx  datasets.ods  dev.ipynb  probability_distributions.ods  results_DeepState.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/dev/: Electricity Experiment.ipynb  Pytorch_Tensorboard_Example.ipynb  callable_type_hint.ipynb  pytorch-forecasting-example.ipynb  shuffle multiindex.ipynb  speed_test.ipynb  tmp.ipynb
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/docs/: ISSUES.md  Makefile  RECIPES.rst  api.rst.bak  conf.py  index.rst  index.rst.bak
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/run/: clean_history.md  pydeps.sh  setup_remote.sh
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/templates/: .isort.cfg  .pylintrc  mypy.ini  pylintrc.cfg  pytest.ini
linodenet/latent_linear_odes_with_neural-Supplementary Material/supplementary/tsdm/tests/: __init__.py  test_converters.py  test_rnn_utils.py  test_split_preparation.py
(+436 files in other folders)
