#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


########################
# Poetry Configuration #
########################

[tool.poetry]
description = "Linear ODE Network for Time Series Forecasting"
include = ["CHANGELOG.rst", "LICENSE.rst", "CONTRIBUTING.rst"]
keywords = ["time series", "machine learning", "neural ode", "kalman filter"]
license = "MIT"
name = "linodenet"
packages = [{include = "linodenet", from="src"}]
readme = "README.rst"
version = "0.2.2"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 11.6",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]


[tool.poetry.extras]
# modin = ["modin"]
# all = ["modin"]
#modin = {version = ">=0.14", extras = ["ray"]}
#ray = {version = ">=1.9", extras = ["default", "tune"]}


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = ">=1.23"
scipy = ">=1.9"
torch = ">=1.12"

#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cu113"
#secondary = true
#default = false

########################
# PyLint Configuration #
########################
[tool.pylint]
[tool.pylint."MESSAGES CONTROL"]
enable= [
    "useless-suppression",
]
disable= [
    "C0103",  # invalid-name
    "C0144",  # non-ascii-name
    "R0801",  # similar lines
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0221",  # arguments-differ
    "W0511",  # (fixme) (todos)
    "W1113",  # keyword-arg-before-vararg
]

[tool.pylint.REPORTS]
# Set the output format. Available formats are text, parseable, colorized, json and
# msvs (visual studio). You can also give a reporter class, e.g. mypackage.mymodule.MyReporterClass
output-format="colorized"

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by pylint inference system, and so shouldn't
# trigger E1101 when accessed. Python regular expressions are accepted.
generated-members=["numpy.*","torch.*"]


######################
# MyPy Configuration #
######################
[tool.mypy]
allow_redefinition = false
color_output = true
error_summary = true
files = ["src/", "tests/"]
plugins = ["numpy.typing.mypy_plugin"]
pretty = true
python_version = "3.10"
check_untyped_defs = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
#warn_return_any = true
#disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "matplotlib.*",
    "modin.*",
    "numba.*",
    "pandas.*",
    "sklearn.*",
    "scipy.*",
    "tsdm.*",
    "tqdm.*",
]
ignore_missing_imports = true


#######################
# isort Configuration #
#######################
[tool.isort]
# isort profiles: black, django, pycharm, google, open_stack, plone, attrs, hug, wemake, appnexus
# black-compatible: black, appnexus
py_version=310
profile="black"
src_paths=["src/", "tests/"]
known_first_party = ["linodenet", "tsdm"]
# flake8-profiles: appnexus, cryptography, edited, google, pep8, pycharm, smarkets
# black-compatible: black, appnexus

#######################
# black Configuration #
#######################
[tool.black]
line-length = 88
target-version = ['py310']
color = true

############################
# pydocstyle Configuration #
############################
[tool.pydocstyle]
convention = "numpy"
#count = true

#########################
# pyright Configuration #
#########################
[tool.pyright]
root = ""
venv = ".venv"
venvPath = "."
pythonVersion = "3.10"
pythonPlatform = "Linux"
stubPath = ""
include = ["src/", "tests/"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.ipynb_checkpoints",
]
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10", pythonPlatform = "Linux", extraPaths = [""]}
]
# region Type Check Diagnostics Settings
reportMissingImports = false
reportMissingTypeStubs = false
reportUnsupportedDunderAll = false
reportPrivateImportUsage = false
# endregion


########################
# PyTest Configuration #
########################
[tool.pytest]
[tool.pytest.ini_options]
testpaths = [ "tests/" ]
reruns = "3"
only_rerun = "AssertionError"
cov = "tsdm"

##########################
# Coverage Configuration #
##########################
[tool.coverage]

[tool.coverage.paths]
source = [
   "src/linodenet",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "@typing.overload",
    "@singledispatch",
    "@singledispatchmethod",
    "if typing.TYPE_CHECKING",
]

[tool.coverage.run]
source = [
    "linodenet/",
    "tests/",
]
